# GameOfLife

./: .gitignore  CMakeLists.txt  README.md
src/: life.cpp  life.h  main.cpp
